force-app/main/default/objects/Lead/fields/Aquatic_Products__c.field-meta.xml
<CustomField>
    <fullName>Aquatic_Products__c</fullName>
    <description>Aquatic products</description>
    <label>Aquatic Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aquatics Learn to Swim</fullName>
            </value>
            <value>
                <fullName>Aquatics Other</fullName>
            </value>
            <value>
                <fullName>Water Safety Instructor</fullName>
            </value>
            <value>
                <fullName>Basic Water Rescue</fullName>
            </value>
            <value>
                <fullName>Water Safety Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>