force-app/main/default/objects/Lead/fields/Aquatic_Training_Types__c.field-meta.xml
<CustomField>
    <fullName>Aquatic_Training_Types__c</fullName>
    <description>Aquatic training types.</description>
    <label>Aquatic Training Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Water Parks</fullName>
            </value>
            <value>
                <fullName>Parks &amp; Rec</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Fitness Club</fullName>
            </value>
            <value>
                <fullName>Hotels, Resorts, Motels, Associations</fullName>
            </value>
            <value>
                <fullName>YMCA</fullName>
            </value>
            <value>
                <fullName>Boys and Girls Club</fullName>
            </value>
            <value>
                <fullName>Other social support organization</fullName>
            </value>
            <value>
                <fullName>Camps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>