force-app/main/default/objects/Lead/fields/BANT_Description__c.field-meta.xml
<CustomField>
    <fullName>BANT_Description__c</fullName>
    <description>This is a Description field to capture any additional information that goes beyond the limited options in the picklist fields under Budget, Authority, Need and purchase Timeline.</description>
    <label>BANT Description</label>
    <type>TextArea</type>
</CustomField>