force-app/main/default/objects/Lead/fields/BGST_Rating__c.field-meta.xml
<CustomField>
    <fullName>BGST_Rating__c</fullName>
    <description>Rating field for BGST profile.</description>
    <label>BGST Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>