force-app/main/default/objects/Lead/fields/Contact_SCC_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_SCC_Sync_Status__c</fullName>
    <defaultValue>&quot;Created&quot;</defaultValue>
    <description>This field hold contact status when its created, updated from Salesforce Commerce Cloud.</description>
    <label>Contact SCC Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Synchronised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>