force-app/main/default/objects/Lead/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF(  ISPICKVAL(  Status  , &quot;Open&quot;)  ,  ROUND( NOW()-CreatedDate, 0 ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Open Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>