force-app/main/default/objects/Lead/fields/DM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is utilized to support the data migration process. It will contain a combination of the source system identifier and the source system&#39;s unique record identifier. This field should be deleted after all migration activities are complete.</description>
    <externalId>true</externalId>
    <label>DM External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>