force-app/main/default/objects/Lead/fields/DM_Legacy_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Legacy_Owner_Name__c</fullName>
    <description>This is the record owner&#39;s name from the legacy source system.  This field is used for data migration purposes only.</description>
    <inlineHelpText>This is the record owner&#39;s name from the legacy source system.  This field is used for data migration purposes only.</inlineHelpText>
    <label>DM Legacy Owner Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>