force-app/main/default/objects/Lead/fields/Estimated_Annual_Enrollees__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Enrollees__c</fullName>
    <label>Estimated Annual Enrollees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-75</fullName>
            </value>
            <value>
                <fullName>76-500</fullName>
            </value>
            <value>
                <fullName>501-999</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>