force-app/main/default/objects/Lead/fields/External_List_ID__c.field-meta.xml
<CustomField>
    <fullName>External_List_ID__c</fullName>
    <description>For control / cross reference to externally purchased lists.</description>
    <label>External List ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>