force-app/main/default/objects/Lead/fields/Keycode__c.field-meta.xml
<CustomField>
    <fullName>Keycode__c</fullName>
    <description>created for April 2015 Direct Marketing campaign run out of Business Operations. intended to capture 3 character code on Postcards and Letters.</description>
    <inlineHelpText>If caller received a postcard or letter, ask for Keycode listed toward bottom of mailer.  If caller received a mailer but can&#39;t retrieve the Keycode, please enter &#39;123&#39; here.</inlineHelpText>
    <label>Keycode</label>
    <length>16</length>
    <type>Text</type>
</CustomField>