force-app/main/default/objects/Lead/fields/Land_Based_Training__c.field-meta.xml
<CustomField>
    <fullName>Land_Based_Training__c</fullName>
    <label>Land Based Training</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>