force-app/main/default/objects/Lead/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>