force-app/main/default/objects/Lead/fields/Lead_Title_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title_Score__c</fullName>
    <label>Lead Title Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>