force-app/main/default/objects/Lead/fields/Need_ongoing_Training__c.field-meta.xml
<CustomField>
    <fullName>Need_ongoing_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead checks and if true will help assign to AP sales queue</description>
    <label>Need ongoing Training</label>
    <type>Checkbox</type>
</CustomField>