force-app/main/default/objects/Lead/fields/No_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_Opportunity__c</fullName>
    <inlineHelpText>Reason if no opportunity is created.</inlineHelpText>
    <label>No Opportunity Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recently Certified</fullName>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Not Reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>