force-app/main/default/objects/Lead/fields/No_Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>No_Opportunity_Detail__c</fullName>
    <inlineHelpText>Detailed reason if no opportunity is created.</inlineHelpText>
    <label>No Opportunity Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>No_Opportunity__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ARC AP</fullName>
            </value>
            <value>
                <fullName>ARC Community</fullName>
            </value>
            <value>
                <fullName>ARC Full Service</fullName>
            </value>
            <value>
                <fullName>Competitor Full Service</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Wrong Email</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Wrong POC</fullName>
            </value>
            <value>
                <fullName>NAN</fullName>
            </value>
            <value>
                <fullName>AP - BGST</fullName>
            </value>
            <value>
                <fullName>AP - Field</fullName>
            </value>
            <value>
                <fullName>RCO Website</fullName>
            </value>
            <value>
                <fullName>ARC Community - Group Size</fullName>
            </value>
            <value>
                <fullName>ARC Community - Other</fullName>
            </value>
            <value>
                <fullName>ARC Community - Price</fullName>
            </value>
            <value>
                <fullName>Competitor AP</fullName>
            </value>
            <value>
                <fullName>FO Other</fullName>
            </value>
            <value>
                <fullName>Field Non BGST Class</fullName>
            </value>
            <value>
                <fullName>Demo/No Fee Class</fullName>
            </value>
            <value>
                <fullName>Pending Agreement/Proposal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>