force-app/main/default/objects/Lead/fields/Number_of_Training_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Training_Locations__c</fullName>
    <description>The number of training locations</description>
    <label>Number of Training Locations</label>
    <length>6</length>
    <type>Text</type>
</CustomField>