force-app/main/default/objects/Lead/fields/Number_to_Train__c.field-meta.xml
<CustomField>
    <fullName>Number_to_Train__c</fullName>
    <description>used on Lead form to help identify which Sales channel a lead will go into.</description>
    <label>Number to Train</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-6</fullName>
            </value>
            <value>
                <fullName>7-50</fullName>
            </value>
            <value>
                <fullName>over 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>