force-app/main/default/objects/Lead/fields/Other_Course_Product__c.field-meta.xml
<CustomField>
    <fullName>Other_Course_Product__c</fullName>
    <inlineHelpText>If primary product selected is other, please specify course name.</inlineHelpText>
    <label>Other Course / Product</label>
    <length>200</length>
    <type>Text</type>
</CustomField>