force-app/main/default/objects/Lead/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <description>This list of options is a high level view of ARC Producs by category. Choose one or more categories that applies to the customers interest.</description>
    <label>Primary Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Aquatics Learn to Swim</fullName>
            </value>
            <value>
                <fullName>Aquatics Other</fullName>
            </value>
            <value>
                <fullName>Babysitting</fullName>
            </value>
            <value>
                <fullName>Basic Water Rescue</fullName>
            </value>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>Citizen CPR</fullName>
            </value>
            <value>
                <fullName>Continuing Education Units</fullName>
            </value>
            <value>
                <fullName>CPR for the Professional Rescuer</fullName>
            </value>
            <value>
                <fullName>Emergency Medical Response</fullName>
            </value>
            <value>
                <fullName>Emergency Preparedness</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>First Aid/CPR/AED Training</fullName>
            </value>
            <value>
                <fullName>First Aid Emergency Drills</fullName>
            </value>
            <value>
                <fullName>Lifeguarding</fullName>
            </value>
            <value>
                <fullName>Lifeline</fullName>
            </value>
            <value>
                <fullName>Nurse Assistant Training</fullName>
            </value>
            <value>
                <fullName>OSHA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ready Rating</fullName>
            </value>
            <value>
                <fullName>Safety Training for Swim Coaches</fullName>
            </value>
            <value>
                <fullName>Training Supplies</fullName>
            </value>
            <value>
                <fullName>Water Safety Instructor</fullName>
            </value>
            <value>
                <fullName>Water Safety Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>