force-app/main/default/objects/Lead/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>After choosing from the Product multi picklist, provide any additional information regarding the clients interest in a particular category.</description>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>