force-app/main/default/objects/Lead/fields/Recert_Date__c.field-meta.xml
<CustomField>
    <fullName>Recert_Date__c</fullName>
    <label>Recert Date</label>
    <type>Date</type>
</CustomField>