force-app/main/default/objects/Lead/fields/Referral_Case__c.field-meta.xml
<CustomField>
    <fullName>Referral_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field allows tracking of the leads that get sent from cases to the PHSS Field Staff</description>
    <label>Referral Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>