force-app/main/default/objects/Lead/fields/SABA_LMS_code__c.field-meta.xml
<CustomField>
    <fullName>SABA_LMS_code__c</fullName>
    <label>SABA\LMS Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>