force-app/main/default/objects/Lead/fields/SubmitterIP__c.field-meta.xml
<CustomField>
    <fullName>SubmitterIP__c</fullName>
    <description>IP address of web leads submitted through RCO</description>
    <inlineHelpText>IP address of web leads submitted through RCO</inlineHelpText>
    <label>Submitter IP</label>
    <length>250</length>
    <type>Text</type>
</CustomField>