force-app/main/default/objects/Lead/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <description>this fields can be used to identify web to case form types</description>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>LTP</fullName>
            </value>
            <value>
                <fullName>Aquatics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>