force-app/main/default/objects/Lead/fields/Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service__c</fullName>
    <label>Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training My Own Employees</fullName>
            </value>
            <value>
                <fullName>Training Companies/Individuals in My Community</fullName>
            </value>
            <value>
                <fullName>Having Red Cross Train at My Facility</fullName>
            </value>
            <value>
                <fullName>Sending Students to Red Cross for Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>