force-app/main/default/objects/Lead/fields/UnbouncePageVariant__c.field-meta.xml
<CustomField>
    <fullName>UnbouncePageVariant__c</fullName>
    <description>Unbounce page version (variant)</description>
    <inlineHelpText>Unbounce page version (variant)</inlineHelpText>
    <label>Unbounce Page Variant</label>
    <length>250</length>
    <type>Text</type>
</CustomField>