force-app/main/default/objects/Lead/fields/UnbounceSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>UnbounceSubmissionDate__c</fullName>
    <description>Date RCO web lead submitted from Unbounce landing page</description>
    <inlineHelpText>Date RCO web lead submitted from Unbounce landing page</inlineHelpText>
    <label>Unbounce Submission Date</label>
    <type>Date</type>
</CustomField>