force-app/main/default/objects/Lead/fields/UnbounceSubmissionTime__c.field-meta.xml
<CustomField>
    <fullName>UnbounceSubmissionTime__c</fullName>
    <description>Time RCO web lead submitted from Unbounce landing page</description>
    <inlineHelpText>Time RCO web lead submitted from Unbounce landing page</inlineHelpText>
    <label>Unbounce Submission Time</label>
    <length>250</length>
    <type>Text</type>
</CustomField>