force-app/main/default/objects/Lead/fields/Water_Based_Training__c.field-meta.xml
<CustomField>
    <fullName>Water_Based_Training__c</fullName>
    <label>Water Based Training</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>