force-app/main/default/objects/Lead/validationRules/Correct_Format_for_the_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Format_for_the_Phone_Number</fullName>
    <active>false</active>
    <description>The phone number should be in the correct format</description>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter the phone number in the correct format.</errorMessage>
</ValidationRule>