force-app/main/default/objects/Lead/validationRules/Require_Contact_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_Info</fullName>
    <active>true</active>
    <description>For BGST, require one piece of contact information to create a Lead.</description>
    <errorConditionFormula>AND( 
CONTAINS(Owner_Profile__c, &quot;ARC BGST&quot;),
(ISBLANK( Email )),
(ISBLANK( Phone )),
(ISBLANK( MobilePhone ))
)</errorConditionFormula>
    <errorMessage>A phone number, mobile phone number, or email address is required to create a Lead.</errorMessage>
</ValidationRule>