force-app/main/default/objects/Lead/validationRules/Require_Other_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Course</fullName>
    <active>true</active>
    <description>If primary product other selected, require user to enter information in other course field.</description>
    <errorConditionFormula>AND
(  

ISPICKVAL(Primary_Product__c, &quot;Other&quot;),  



ISBLANK( Other_Course_Product__c ) 

)</errorConditionFormula>
    <errorDisplayField>Other_Course_Product__c</errorDisplayField>
    <errorMessage>Please enter course/product name.</errorMessage>
</ValidationRule>